--- a/toronto/.config/kanshi/config
+++ b/toronto/.config/kanshi/config
@@ -1,8 +1,13 @@
 profile {
 	output eDP-1 disable
-	output DP-4 mode 2560x1440@144Hz position 0,0
+	output DP-5 mode 2560x1440@165Hz position 0,0
 }
 
 profile {
-	output eDP-1 enable mode 1920x1080
+	output eDP-1 enable
+}
+
+profile {
+	output DP-3 enable scale 2
+	output eDP-1 enable scale 1.25
 }
