--- a/toronto/.config/alacritty/alacritty.yml
+++ b/toronto/.config/alacritty/alacritty.yml
@@ -180,11 +180,11 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Tomorrow Night Bright)
-#colors:
+colors:
   # Default colors
-  #primary:
-  #  background: '0x000000'
-  #  foreground: '0xeaeaea'
+  primary:
+    background: '0x212121'
+    foreground: '0xfcfcfa'
 
     # Bright and dim foreground colors
     #
@@ -287,7 +287,7 @@ font:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+#background_opacity: 0.95
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
