--- a/toronto/.config/alacritty/alacritty.yml
+++ b/toronto/.config/alacritty/alacritty.yml
@@ -106,7 +106,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "JetBrains Mono"
+    family: "IBM Plex Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
