--- a/toronto/.config/kanshi/config
+++ b/toronto/.config/kanshi/config
@@ -8,6 +8,6 @@ profile {
 }
 
 profile {
-	output DP-3 enable scale 2
-	output eDP-1 enable scale 1.25
+	output DP-3 mode 2560x1440@60Hz scale 1 position 0,0
+	output eDP-1 disable
 }
