--- a/toronto/.config/starship.toml
+++ b/toronto/.config/starship.toml
@@ -5,7 +5,7 @@ format = """
 [│](bold green) $directory\
 $git_status$git_branch \
 $golang$python$rust
-[└─ $character](bold green)"""
+[└ $character](bold green)"""
 
 
 [character]
