--- a/toronto/.config/i3/config
+++ b/toronto/.config/i3/config
@@ -213,3 +213,7 @@ gaps inner 2
 
 # Display script
 bindsym $mod+p exec --no-startup-id ~/.config/i3/display.sh
+
+exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+
+exec_always --no-startup-id feh --randomize --bg-fill ~/Pictures/cci-bg.png
