Tweaks for monitor setup, clean up ST3 plugins.

--- a/toronto/.config/picom/picom.conf
+++ b/toronto/.config/picom/picom.conf
@@ -152,6 +152,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
+opacity-rule = [
+  "100:class_g = 'jetbrains-goland'"
+]
 
 
 #################################
